--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <a href="week1.html"><b>1</b></a>
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
-<a href="week4.html"><b>4</b></a><br>
+<a href="week4.html"><b>4</b></a>
+<a href="week5.html"><b>5</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -62,42 +63,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3110</font></td>
-    <td><font size=2>2405</font></td>
+    <td><font size=2>3920</font></td>
+    <td><font size=2>2780</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>615</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2710</font></td>
-    <td><font size=2>2635</font></td>
-    <td><font size=2>880</font></td>
+    <td><font size=2>3670</font></td>
+    <td><font size=2>3310</font></td>
+    <td><font size=2>960</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2445</font></td>
-    <td><font size=2>2205</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3120</font></td>
+    <td><font size=2>3165</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2265</font></td>
-    <td><font size=2>2750</font></td>
-    <td><font size=2>590</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2915</font></td>
+    <td><font size=2>3735</font></td>
+    <td><font size=2>650</font></td>
     <td><font size=2>535</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1765</font></td>
-    <td><font size=2>2190</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2265</font></td>
+    <td><font size=2>2705</font></td>
     <td><font size=2>525</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td></tr>
@@ -109,40 +110,40 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Sam(10)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>4020</font></td>
+    <td><font size=2>3015</font></td>
+    <td><font size=2>985</font></td>
+    <td><font size=2>650</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3095</font></td>
-    <td><font size=2>2675</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3640</font></td>
+    <td><font size=2>3505</font></td>
     <td><font size=2>1345</font></td>
     <td><font size=2>535</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Sam(10)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3035</font></td>
-    <td><font size=2>2365</font></td>
-    <td><font size=2>815</font></td>
-    <td><font size=2>650</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2750</font></td>
-    <td><font size=2>2180</font></td>
-    <td><font size=2>1030</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2570</font></td>
-    <td><font size=2>2975</font></td>
+    <td><font size=2>3400</font></td>
+    <td><font size=2>3520</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Matthew(4)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3125</font></td>
+    <td><font size=2>2990</font></td>
+    <td><font size=2>1030</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>2375</font></td>
     <td><font size=2>3740</font></td>
