--- a/pickups.html
+++ b/pickups.html
@@ -134,8 +134,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Mason Crosby/Chris Boswell</td>
+<td width=50>10/2</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -163,8 +163,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Kyle Lauletta/Sterling Shepard</td>
+<td width=50>10/7</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -203,8 +203,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Greg Olsen/-</td>
+<td width=50>10/5</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -335,7 +335,10 @@ Team 10 - Randall Cobb/Kaare Vedvik (9/11)<br>
 Team 6  - TJ Yeldon/KhaDarel Hodge (9/11)<br>
 Team 8  - Kenny Stills/Jerick McKinnon (9/12)<br>
 Team 8  - Brandon McManus/Eddy Piniero (9/18)<br>
-Team 9  - Javorius Allen/Rex Burkhead (9/30)
+Team 9  - Javorius Allen/Rex Burkhead (9/30)<br>
+Team 3  - Vance McDonald/Will Dissly (10/2)<br>
+Team 5  - Eric Ebron/Delanie Walker (10/2)<br>
+Team 9  - Mike Williams/Jimmy Garoppolo (10/4)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=500>
@@ -351,5 +354,10 @@ Team 8  - Latavius Murray
 <td width=500>
 Team 6  - Kyle Rudolph<br>
 Team 7  - TJ Yeldon
+</td></tr>
+<tr><td width=50>10/5</td>
+<td width=500>
+Team 7  - George Kittle, Dalvin Cook, Latavius Murray (cut Chris Ivory)<br>
+Team 8  - Leonard Fournette, TJ Yeldon
 </td></tr>
 </table>
