--- a/roster.html
+++ b/roster.html
@@ -79,13 +79,13 @@
 <tr><td>JAX</td><td>Keelan Cole            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Ricky Seals-Jones      </td></tr>
+<tr><td>PIT</td><td>Vance McDonald         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td>MIN</td><td>Dan Bailey             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
-<tr><td>SEA</td><td>Will Dissly            </td></tr>
 </table>
 </td>
 </tr>
@@ -135,9 +135,9 @@
 <tr><td>DAL</td><td>Dez Bryant             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
-<tr><td>TEN</td><td>Delanie Walker         </td></tr>
+<tr><td>IND</td><td>Eric Ebron             </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>PIT</td><td>Chris Boswell          </td></tr>
+<tr><td> GB</td><td>Mason Crosby           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
@@ -161,7 +161,6 @@
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>CLE</td><td>Josh Gordon            </td></tr>
 <tr><td>TEN</td><td>Corey Davis            </td></tr>
-<tr><td>NYG</td><td>Sterling Shepard       </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -172,6 +171,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>IND</td><td>Jordan Wilkins         </td></tr>
+<tr><td>NYG</td><td>Kyle Lauletta          </td></tr>
 </table>
 </td>
 </tr>
@@ -182,13 +182,12 @@
 <tr><td> NE</td><td>Tom Brady              </td></tr>
 <tr><td> TB</td><td>Jameis Winston         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>JAX</td><td>Leonard Fournette      </td></tr>
 <tr><td>BAL</td><td>Alex Collins           </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>NYJ</td><td>Bilal Powell           </td></tr>
-<tr><td>BUF</td><td>Chris Ivory            </td></tr>
 <tr><td> NE</td><td>James White            </td></tr>
-<tr><td>JAX</td><td>TJ Yeldon              </td></tr>
+<tr><td>MIN</td><td>Dalvin Cook            </td></tr>
+<tr><td>MIN</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>OAK</td><td>Amari Cooper           </td></tr>
@@ -197,6 +196,7 @@
 <tr><td>OAK</td><td>Jordy Nelson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
+<tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Stephen Gostkowski     </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -210,11 +210,11 @@
 <tr><td>IND</td><td>Andrew Luck            </td></tr>
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>HOU</td><td>Lamar Miller           </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
 <tr><td>IND</td><td>Marlon Mack            </td></tr>
-<tr><td>MIN</td><td>Latavius Murray        </td></tr>
+<tr><td>JAX</td><td>Leonard Fournette      </td></tr>
+<tr><td>JAX</td><td>TJ Yeldon              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Antonio Brown          </td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
@@ -223,7 +223,7 @@
 <tr><td>MIA</td><td>Kenny Stills           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
-<tr><td> SF</td><td>George Kittle          </td></tr>
+<tr><td>CAR</td><td>Greg Olsen             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Greg Zuerlein          </td></tr>
 <tr><td>DEN</td><td>Brandon McManus        </td></tr>
@@ -235,7 +235,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (9)</b></font></td></tr>
-<tr><td> SF</td><td>Jimmy Garoppolo        </td></tr>
 <tr><td>PIT</td><td>Ben Roethlisberger     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Kareem Hunt            </td></tr>
@@ -248,6 +247,7 @@
 <tr><td>SEA</td><td>Doug Baldwin           </td></tr>
 <tr><td> NE</td><td>Chris Hogan            </td></tr>
 <tr><td>NYJ</td><td>Robby Anderson         </td></tr>
+<tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jack Doyle             </td></tr>
 <tr><td height=9></td><td></td></tr>
