--- a/roster.html
+++ b/roster.html
@@ -125,9 +125,9 @@
 <tr><td>PHI</td><td>Carson Wentz           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Kenyan Drake           </td></tr>
-<tr><td>PHI</td><td>Jay Ajayi              </td></tr>
 <tr><td>WAS</td><td>Chris Thompson         </td></tr>
 <tr><td>CLE</td><td>Duke Johnson           </td></tr>
+<tr><td>SEA</td><td>Mike Davis             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
@@ -184,7 +184,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Alex Collins           </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
-<tr><td>NYJ</td><td>Bilal Powell           </td></tr>
 <tr><td> NE</td><td>James White            </td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>MIN</td><td>Latavius Murray        </td></tr>
@@ -192,11 +191,12 @@
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>OAK</td><td>Amari Cooper           </td></tr>
 <tr><td>CAR</td><td>Devin Funchess         </td></tr>
-<tr><td> SF</td><td>Pierre Garcon          </td></tr>
 <tr><td>OAK</td><td>Jordy Nelson           </td></tr>
+<tr><td>HOU</td><td>Will Fuller            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
+<tr><td> TB</td><td>Cameron Brate          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Stephen Gostkowski     </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -266,7 +266,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (10)</b></font></td></tr>
 <tr><td>LAC</td><td>Philip Rivers          </td></tr>
-<tr><td> TB</td><td>Ryan Fitzpatrick       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td>BUF</td><td>LeSean McCoy           </td></tr>
@@ -274,6 +273,7 @@
 <tr><td>NYJ</td><td>Isaiah Crowell         </td></tr>
 <tr><td>PHI</td><td>Corey Clement          </td></tr>
 <tr><td>CIN</td><td>Giovani Bernard        </td></tr>
+<tr><td>PHI</td><td>Wendell Smallwood      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Odell Beckham          </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
