--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
-<a href="week5.html"><b>5</b></a><br>
+<a href="week5.html"><b>5</b></a>
+<a href="week6.html"><b>6</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -63,43 +64,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3920</font></td>
-    <td><font size=2>2780</font></td>
+    <td><font size=2>4870</font></td>
+    <td><font size=2>3710</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>615</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Roger(3)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3670</font></td>
-    <td><font size=2>3310</font></td>
+    <td><font size=2>4525</font></td>
+    <td><font size=2>4090</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>470</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3120</font></td>
-    <td><font size=2>3165</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4050</font></td>
+    <td><font size=2>4115</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2915</font></td>
-    <td><font size=2>3735</font></td>
-    <td><font size=2>650</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3695</font></td>
+    <td><font size=2>4590</font></td>
+    <td><font size=2>780</font></td>
     <td><font size=2>535</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>2265</font></td>
-    <td><font size=2>2705</font></td>
-    <td><font size=2>525</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>2915</font></td>
+    <td><font size=2>3615</font></td>
+    <td><font size=2>650</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
@@ -112,44 +113,44 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4020</font></td>
-    <td><font size=2>3015</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4465</font></td>
+    <td><font size=2>3490</font></td>
     <td><font size=2>985</font></td>
-    <td><font size=2>650</font></td>
+    <td><font size=2>445</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3640</font></td>
-    <td><font size=2>3505</font></td>
+    <td><font size=2>4115</font></td>
+    <td><font size=2>3950</font></td>
     <td><font size=2>1345</font></td>
-    <td><font size=2>535</font></td>
+    <td><font size=2>475</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3400</font></td>
-    <td><font size=2>3520</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4310</font></td>
+    <td><font size=2>4170</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Rich(2)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3575</font></td>
+    <td><font size=2>4605</font></td>
+    <td><font size=2>725</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3125</font></td>
-    <td><font size=2>2990</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3490</font></td>
+    <td><font size=2>3675</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>2375</font></td>
-    <td><font size=2>3740</font></td>
-    <td><font size=2>725</font></td>
-    <td><font size=2>520</font></td>
-    <td><font size=2>0</font></td></tr>
 </table>
 </table>
 </body>
