--- a/pickups.html
+++ b/pickups.html
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Cameron Brate/Bilal Powell</td>
+<td width=50>10/14</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -222,8 +222,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Will Fuller/Pierre Garcon</td>
+<td width=50>10/14</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Wendell Smallwood/Ryan Fitzpatrick</td>
+<td width=50>10/9</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -338,7 +338,8 @@ Team 8  - Brandon McManus/Eddy Piniero (9/18)<br>
 Team 9  - Javorius Allen/Rex Burkhead (9/30)<br>
 Team 3  - Vance McDonald/Will Dissly (10/2)<br>
 Team 5  - Eric Ebron/Delanie Walker (10/2)<br>
-Team 9  - Mike Williams/Jimmy Garoppolo (10/4)
+Team 9  - Mike Williams/Jimmy Garoppolo (10/4)<br>
+Team 5  - Mike Davis/Jay Ajayi (10/10)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=500>
