--- a/freeagt.html
+++ b/freeagt.html
@@ -1,32 +1,31 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2018 Free Agent Leaderboard<br>(Through week 5)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2018 Free Agent Leaderboard<br>(Through week 6)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Blake Bortles          </td><td><font size=3> 840</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 650</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 645</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Derek Carr             </td><td><font size=3> 630</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Case Keenum            </td><td><font size=3> 585</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 565</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Eli Manning            </td><td><font size=3> 515</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Alex Smith             </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>CJ Beathard            </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Dak Prescott           </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Sam Bradford           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Nick Foles             </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>1000</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Blake Bortles          </td><td><font size=3> 915</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 790</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Case Keenum            </td><td><font size=3> 740</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 700</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 650</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Derek Carr             </td><td><font size=3> 630</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Eli Manning            </td><td><font size=3> 560</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Dak Prescott           </td><td><font size=3> 560</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>CJ Beathard            </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Alex Smith             </td><td><font size=3> 525</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Brock Osweiler         </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Sam Bradford           </td><td><font size=3> 150</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Mike Davis             </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Bilal Powell           </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>Wendell Smallwood      </td><td><font size=3> 160</td></tr>
 <tr><td><font size=3>Chris Ivory            </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>LeGarrette Blount      </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Anthony Sherman        </td><td><font size=3> 100</td></tr>
@@ -36,84 +35,85 @@
 <tr><td><font size=3>Kapri Bibbs            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Kenneth Dixon          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Zach Line              </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Rex Burkhead           </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Raheem Mostert         </td><td><font size=3>  40</td></tr>
 <tr><td><font size=3>Devontae Booker        </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>Corey Grant            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Albert Wilson          </td><td><font size=3> 660</td></tr>
 <tr><td><font size=3>Jakeem Grant           </td><td><font size=3> 635</td></tr>
-<tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 535</td></tr>
+<tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>Tyler Boyd             </td><td><font size=3> 490</td></tr>
 <tr><td><font size=3>John Brown             </td><td><font size=3> 440</td></tr>
+<tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 380</td></tr>
+<tr><td><font size=3>Mohamed Sanu           </td><td><font size=3> 370</td></tr>
 <tr><td><font size=3>Geronimo Allison       </td><td><font size=3> 360</td></tr>
-<tr><td><font size=3>Albert Wilson          </td><td><font size=3> 360</td></tr>
-<tr><td><font size=3>Tyler Boyd             </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>Will Fuller            </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>Mohamed Sanu           </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>Chris Godwin           </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Chris Godwin           </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Tyrell Williams        </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Cole Beasley           </td><td><font size=3> 260</td></tr>
 <tr><td><font size=3>Donte Moncrief         </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Terrelle Pryor         </td><td><font size=3> 240</td></tr>
 <tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 240</td></tr>
 <tr><td><font size=3>Quincy Enunwa          </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Tavon Austin           </td><td><font size=3> 210</td></tr>
-<tr><td><font size=3>Ted Ginn               </td><td><font size=3> 210</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>Jesse James            </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 135</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Darren Fells           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Tyler Eifert           </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jason Croom            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Virgil Green           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Rhett Ellison          </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Josh Hill              </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Garrett Celek          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>AJ Derby               </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Logan Paulsen          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Michael Roberts        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Geoff Swaim            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Erik Swoope            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Erik Swoope            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Tyler Eifert           </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Jason Croom            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Virgil Green           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Rhett Ellison          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Josh Hill              </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Garrett Celek          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>AJ Derby               </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Logan Paulsen          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Michael Roberts        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Geoff Swaim            </td><td><font size=3>  75</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>Brett Maher            </td><td><font size=3> 620</td></tr>
 <tr><td><font size=3>Ryan Succop            </td><td><font size=3> 545</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>Brett Maher            </td><td><font size=3> 405</td></tr>
-<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 375</td></tr>
-<tr><td><font size=3>Sebastian Janikowski   </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Steven Hauschka        </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 495</td></tr>
+<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 475</td></tr>
+<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 465</td></tr>
+<tr><td><font size=3>Sebastian Janikowski   </td><td><font size=3> 450</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>Steven Hauschka        </td><td><font size=3> 415</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 405</td></tr>
+<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 345</td></tr>
 <tr><td><font size=3>Caleb Sturgis          </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>Chandler Catanzaro     </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>Mike Nugent            </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Chandler Catanzaro     </td><td><font size=3> 195</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Tre'Quan Smith         </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>Will Dissly            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Ito Smith              </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Dane Cruikshank        </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Ito Smith              </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 130</td></tr>
 <tr><td><font size=3>Keke Coutee            </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Courtland Sutton       </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Chris Herndon          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Courtland Sutton       </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Mark Andrews           </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>James Washington       </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Damion Ratley          </td><td><font size=3>  40</td></tr>
 <tr><td><font size=3>Equanimeous St Brown   </td><td><font size=3>  40</td></tr>
 <tr><td><font size=3>Derrick Willies        </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Jordan Thomas          </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>KhaDarel Hodge         </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>David Marvin           </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
