--- a/pickups.html
+++ b/pickups.html
@@ -118,8 +118,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tre'Quan Amith/Keelan Cole</td>
+<td width=50>10/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -146,8 +146,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Brett Maher/Dez Bryant</td>
+<td width=50>10/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -286,20 +286,20 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ito Smith/Alfred Morris</td>
+<td width=50>10/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>John Brown/Randall Cobb</td>
+<td width=50>10/18</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>CJ Beathard/Kalen Ballage</td>
+<td width=50>10/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -339,7 +339,8 @@ Team 9  - Javorius Allen/Rex Burkhead (9/30)<br>
 Team 3  - Vance McDonald/Will Dissly (10/2)<br>
 Team 5  - Eric Ebron/Delanie Walker (10/2)<br>
 Team 9  - Mike Williams/Jimmy Garoppolo (10/4)<br>
-Team 5  - Mike Davis/Jay Ajayi (10/10)
+Team 5  - Mike Davis/Jay Ajayi (10/10)<br>
+Team 4  - Tyler Boyd/Devonta Freeman (10/21)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=500>
