--- a/roster.html
+++ b/roster.html
@@ -76,7 +76,6 @@
 <tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td> KC</td><td>Sammy Watkins          </td></tr>
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
-<tr><td>JAX</td><td>Keelan Cole            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Ricky Seals-Jones      </td></tr>
 <tr><td>PIT</td><td>Vance McDonald         </td></tr>
@@ -86,6 +85,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
+<tr><td> NO</td><td>Tre'Quan Smith         </td></tr>
 </table>
 </td>
 </tr>
@@ -97,7 +97,6 @@
 <tr><td>DET</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
-<tr><td>ATL</td><td>Devonta Freeman        </td></tr>
 <tr><td>CHI</td><td>Jordan Howard          </td></tr>
 <tr><td>OAK</td><td>Doug Martin            </td></tr>
 <tr><td> GB</td><td>Ty Montgomery          </td></tr>
@@ -106,6 +105,7 @@
 <tr><td>LAR</td><td>Brandin Cooks          </td></tr>
 <tr><td>BAL</td><td>Michael Crabtree       </td></tr>
 <tr><td>DEN</td><td>Emmanuel Sanders       </td></tr>
+<tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td>OAK</td><td>Jared Cook             </td></tr>
@@ -132,12 +132,12 @@
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
-<tr><td>DAL</td><td>Dez Bryant             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>IND</td><td>Eric Ebron             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
+<tr><td>DAL</td><td>Brett Maher            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
@@ -236,11 +236,11 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (9)</b></font></td></tr>
 <tr><td>PIT</td><td>Ben Roethlisberger     </td></tr>
+<tr><td> SF</td><td>CJ Beathard            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Kareem Hunt            </td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>TEN</td><td>Dion Lewis             </td></tr>
-<tr><td> SF</td><td>Alfred Morris          </td></tr>
 <tr><td>BAL</td><td>Javorius Allen         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>DeAndre Hopkins        </td></tr>
@@ -254,10 +254,10 @@
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ARI</td><td>Josh Rosen             </td></tr>
-<tr><td>MIA</td><td>Kalen Ballage          </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td> SF</td><td>Dante Pettis           </td></tr>
 <tr><td>CLE</td><td>Greg Joseph            </td></tr>
+<tr><td>ATL</td><td>Ito Smith              </td></tr>
 </table>
 </td>
 </tr>
@@ -278,7 +278,7 @@
 <tr><td>NYG</td><td>Odell Beckham          </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
-<tr><td> GB</td><td>Randall Cobb           </td></tr>
+<tr><td>BAL</td><td>John Brown             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>CHI</td><td>Trey Burton            </td></tr>
