--- a/pickups.html
+++ b/pickups.html
@@ -75,8 +75,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Courtland Sutton/Michael Crabtree</td>
+<td width=50>10/23</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -234,8 +234,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Traded to Grant</td>
+<td width=50>9/27</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -340,7 +340,8 @@ Team 3  - Vance McDonald/Will Dissly (10/2)<br>
 Team 5  - Eric Ebron/Delanie Walker (10/2)<br>
 Team 9  - Mike Williams/Jimmy Garoppolo (10/4)<br>
 Team 5  - Mike Davis/Jay Ajayi (10/10)<br>
-Team 4  - Tyler Boyd/Devonta Freeman (10/21)
+Team 4  - Tyler Boyd/Devonta Freeman (10/21)<br>
+Team 1  - Mitchell Trubisky/Matt McCrane (10/22)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=500>
@@ -354,12 +355,22 @@ Team 8  - Latavius Murray
 </td></tr>
 <tr><td width=50>9/27</td>
 <td width=500>
-Team 6  - Kyle Rudolph<br>
+Team 6  - Kyle Rudolph, pickup ()<br>
 Team 7  - TJ Yeldon
 </td></tr>
 <tr><td width=50>10/5</td>
 <td width=500>
 Team 7  - George Kittle, Dalvin Cook, Latavius Murray (cut Chris Ivory)<br>
 Team 8  - Leonard Fournette, TJ Yeldon
+</td></tr>
+<tr><td width=50>10/26</td>
+<td width=500>
+Team 7  - Baker Mayfield, John Brown (cut Mike Gesicki)<br>
+Team 10 - Davante Adams
+</td></tr>
+<tr><td width=50>10/26</td>
+<td width=500>
+Team 5  - Philip Rivers<br>
+Team 10 - Russell Wilson
 </td></tr>
 </table>
