--- a/roster.html
+++ b/roster.html
@@ -8,6 +8,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
+<tr><td>CHI</td><td>Mitchell Trubisky      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
 <tr><td>ATL</td><td>Tevin Coleman          </td></tr>
@@ -29,7 +30,6 @@
 <tr><td>LAR</td><td>John Kelly             </td></tr>
 <tr><td>BAL</td><td>Hayden Hurst           </td></tr>
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
-<tr><td>OAK</td><td>Matt McCrane           </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -103,7 +103,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
 <tr><td>LAR</td><td>Brandin Cooks          </td></tr>
-<tr><td>BAL</td><td>Michael Crabtree       </td></tr>
 <tr><td>DEN</td><td>Emmanuel Sanders       </td></tr>
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -116,13 +115,14 @@
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
+<tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 </table>
 </td>
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Steven (5)</b></font></td></tr>
-<tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td>PHI</td><td>Carson Wentz           </td></tr>
+<tr><td>LAC</td><td>Philip Rivers          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Kenyan Drake           </td></tr>
 <tr><td>WAS</td><td>Chris Thompson         </td></tr>
@@ -188,11 +188,11 @@
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>MIN</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> GB</td><td>Davante Adams          </td></tr>
-<tr><td>OAK</td><td>Amari Cooper           </td></tr>
+<tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>CAR</td><td>Devin Funchess         </td></tr>
 <tr><td>OAK</td><td>Jordy Nelson           </td></tr>
 <tr><td>HOU</td><td>Will Fuller            </td></tr>
+<tr><td>BAL</td><td>John Brown             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
@@ -201,7 +201,7 @@
 <tr><td> NE</td><td>Stephen Gostkowski     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Royce Freeman          </td></tr>
-<tr><td>MIA</td><td>Mike Gesicki           </td></tr>
+<tr><td>CLE</td><td>Baker Mayfield         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -265,11 +265,11 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (10)</b></font></td></tr>
-<tr><td>LAC</td><td>Philip Rivers          </td></tr>
+<tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td>BUF</td><td>LeSean McCoy           </td></tr>
-<tr><td>CLE</td><td>Carlos Hyde            </td></tr>
+<tr><td>JAX</td><td>Carlos Hyde            </td></tr>
 <tr><td>NYJ</td><td>Isaiah Crowell         </td></tr>
 <tr><td>PHI</td><td>Corey Clement          </td></tr>
 <tr><td>CIN</td><td>Giovani Bernard        </td></tr>
@@ -278,7 +278,7 @@
 <tr><td>NYG</td><td>Odell Beckham          </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
-<tr><td>BAL</td><td>John Brown             </td></tr>
+<tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>CHI</td><td>Trey Burton            </td></tr>
@@ -287,7 +287,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Sam Darnold            </td></tr>
 <tr><td>SEA</td><td>Rashaad Penny          </td></tr>
-<tr><td>CLE</td><td>Baker Mayfield         </td></tr>
 </table>
 </td>
 <td>
