--- a/thousand.html
+++ b/thousand.html
@@ -771,6 +771,12 @@
     <td>1020</td>
     <td>Grant</td>
     <td>615</td></tr>
+<tr><td>2018</td>
+    <td>Week 8</td>
+    <td>Roger Bakos</td>
+    <td>1020</td>
+    <td>Matthew</td>
+    <td>655</td></tr>
 <tr><td>1998</td>
     <td>Week 13</td>
     <td>Steve Butler</td>
